[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/player/PlayerPlatformActor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/player/controllers/ActionNotifier.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/player/controllers/HoldNotifier.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/player/ActionBuffer.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/combat/CombatStateMachine.gd" type="Script" id=7]
[ext_resource path="res://actors/physics/State.gd" type="Script" id=8]
[ext_resource path="res://actors/combat/HurtBox.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 64 )

[node name="PlayerCombatActor" instance=ExtResource( 1 )]
collision_layer = 0

[node name="StateMachine" parent="." index="1"]
actor_path = NodePath("..")

[node name="Jump" parent="StateMachine/IdleState" index="1"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/IdleState" index="2"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Gravity" parent="StateMachine/WalkState" index="3"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Jump" parent="StateMachine/JumpState" index="0"]
actor_path = NodePath("..")

[node name="Fall" parent="StateMachine/JumpState" index="1"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/JumpState" index="4"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Stop" parent="StateMachine/DashState" index="0"]
actor_path = NodePath("..")

[node name="Fall" parent="StateMachine/DashJumpState" index="0"]
actor_path = NodePath("..")

[node name="Stop" parent="StateMachine/DashJumpState" index="1"]
actor_path = NodePath("..")

[node name="Move" parent="StateMachine/DashJumpState" index="2"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/DashJumpState" index="3"]
actor_path = NodePath("../../../../PlayerCombatActor")

[node name="Gravity" parent="StateMachine/SecondJumpState" index="3"]
actor_path = NodePath("../../../../PlayerCombatActor/StateMachine/SecondJumpState")

[node name="Stop" parent="StateMachine/DashJumpFallState" index="0"]
actor_path = NodePath("..")

[node name="Move" parent="StateMachine/DashJumpFallState" index="2"]
actor_path = NodePath("..")

[node name="Fall" parent="StateMachine/DashJumpFallState" index="3"]
actor_path = NodePath("..")

[node name="Stop" parent="StateMachine/DashFallState" index="0"]
actor_path = NodePath("..")

[node name="Gravity" parent="StateMachine/DashFallState" index="1"]
actor_path = NodePath("../../../../PlayerCombatActor/StateMachine/DashFallState")

[node name="AttackNotifier" parent="Controls" index="5" instance=ExtResource( 4 )]

[node name="AttackHeldNotifier" parent="Controls" index="6" instance=ExtResource( 5 )]

[node name="DefendNotifier" parent="Controls" index="7" instance=ExtResource( 4 )]
action = "defend"

[node name="ActionBuffer" parent="Controls" index="8" instance=ExtResource( 6 )]

[node name="CombatStateMachine" type="Node2D" parent="." index="3"]
script = ExtResource( 7 )

[node name="IdleState" type="Node2D" parent="CombatStateMachine" index="0"]
script = ExtResource( 8 )

[node name="HurtBox" parent="." index="4" groups=[
"player",
] instance=ExtResource( 9 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -64 )
shape = SubResource( 1 )
[connection signal="pressed" from="Controls/LeftNotifier" to="CombatStateMachine" method="set_direction" binds= [ Vector2( -1, 0 ) ]]
[connection signal="pressed" from="Controls/RightNotifier" to="CombatStateMachine" method="set_direction" binds= [ Vector2( 1, 0 ) ]]
[connection signal="pressed" from="Controls/AttackNotifier" to="CombatStateMachine" method="execute" binds= [ "Attack" ]]
[connection signal="released" from="Controls/AttackNotifier" to="CombatStateMachine" method="cancel" binds= [ "Attack" ]]
[connection signal="pressed" from="Controls/AttackHeldNotifier" to="CombatStateMachine" method="execute" binds= [ "Charge" ]]
[connection signal="released" from="Controls/AttackHeldNotifier" to="CombatStateMachine" method="cancel" binds= [ "Charge" ]]
